--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
         aws-region: us-west-2
 
     - name: Update kubeconfig
-      run: aws eks update-kubeconfig --name <my-eks-cluster>
+      run: aws eks update-kubeconfig --name my-eks-cluster
 
     - name: Deploy to EKS
       run: |
